# tendon

./: .travis.yml  CLUTTER.md  Cargo.toml  DESIGN.md  DESIGN.txt  LICENSE.md  README.md
analysis-to-transgress/: Cargo.toml  README.md  test.json  test2.json
analysis-to-transgress/src/: db.rs  inspect.rs  lib.rs  sigbuilder.rs  tools.rs
analysis-to-transgress/tests/: basic.rs  test.json
api-scrape/: Cargo.toml  README.md
api-scrape/src/: lib.rs  tools.rs
api-scrape/src/memo/: cell.rs  mod.rs
api-scrape/src/resolve/: ident.rs  item_expand.rs  mod.rs  registry.rs
api-scrape/src/resolve/item_expand/: ast.rs
api-scrape/tests/: basic.rs
prefab/: Cargo.toml  README.md
reprieve/: Cargo.toml  README.md
reprieve/src/: block.rs  exec.rs  lib.rs  once.rs  util.rs
rustdoc-scrape/: Cargo.toml  README.md
rustdoc-scrape/src/: lib.rs
rustdoc-scrape/tests/: basic.rs
spoor/: Cargo.toml  README.md
spoor/src/: lib.rs
tendon/: Cargo.toml  README.md
tendon-api/: Cargo.toml  README.md
tendon-api/benches/: components.rs
tendon-api/src/: attributes.rs  builtins.rs  crates.rs  database.rs  expressions.rs  generics.rs  identities.rs  idents.rs  items.rs  lib.rs  paths.rs  scopes.rs  types.rs
tendon-api/src/database/: serializers.rs
tendon-api/src/identities/: types.rs
tendon-resolve/: Cargo.toml  README.md
tendon-resolve/benches/: components.rs
tendon-resolve/src/: expand.rs  lib.rs  lower.rs  macro_interp.rs  namespace.rs  resolver.rs  tools.rs  walker.rs
tendon-resolve/src/expand/: ast.rs  consume.rs  transcribe.rs
tendon-resolve/src/lower/: attributes.rs  generics.rs  imports.rs  items.rs  macros.rs  modules.rs  types.rs
tendon-resolve/src/lower/attributes/: interp_cfg.rs
tendon-resolve/src/macro_interp/: ast.rs  consume.rs  transcribe.rs
tendon-resolve/src/resolver/: resolvable.rs
tendon-resolve/src/walker/: helpers.rs  resolvable.rs  textual_scope.rs
tendon-resolve/tests/: basic.rs
test-crate/: Cargo.toml
test-crate/src/: lib.rs
trace-err/: Cargo.toml
transgress/: Cargo.toml  README.md
transgress-abi/: Cargo.toml  README.md
transgress-abi/src/: format.rs  lib.rs
transgress-api/: Cargo.toml  README.md
transgress-api/src/: attributes.rs  db.rs  expr.rs  expressions.rs  generics.rs  ident.rs  idents.rs  items.rs  lib.rs  paths.rs  tokens.rs  traits.rs  types.rs
transgress-api/src/items/: helpers.rs
transgress-resolve/: Cargo.toml
transgress-resolve/benches/: benches.rs  components.rs
transgress-resolve/src/: expand.rs  item_expand.rs  lib.rs  lower.rs  namespace.rs  resolvable.rs  resolver.rs  tools.rs  walker.rs
transgress-resolve/src/expand/: ast.rs  consume.rs  transcribe.rs
transgress-resolve/src/item_expand/: ast.rs  consume.rs
transgress-resolve/src/lower/: attributes.rs  generics.rs  imports.rs  items.rs  macros.rs  modules.rs  struct_.rs  types.rs
transgress-resolve/src/resolver/: module.rs  namespace.rs  resolvable.rs  walker.rs
transgress-resolve/tests/: basic.rs
transgress-source-scrape/: Cargo.toml  README.md
transgress-source-scrape/src/: lib.rs  resolve.rs  tools.rs
transgress-source-scrape/src/resolve/: item_expand.rs  mod.rs
transgress-source-scrape/src/resolve/item_expand/: ALG.md  ast.rs  consume.rs  transcribe.rs
transgress-source-scrape/tests/: basic.rs
unthwart/: Cargo.toml
unthwart/src/: backoff.rs  lib.rs
