[package]
name = "analysis-to-transgress"
version = "0.1.0"
authors = ["James Gilles <jhgilles@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rls-analysis = "0.16"

[dev-dependencies]
pretty_env_logger = "0.3.0"