[package]
name = "analysis-to-transgress"
version = "0.1.0"
authors = ["James Gilles <jhgilles@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rls-analysis = "0.16"
serde = "1"
serde_json = "1"
custom_error = "1.6"
log = "0.4"
regex = "1.1"
dot = "0.1.4"

[dev-dependencies]
pretty_env_logger = "0.3.0"