[package]
name = "api-scrape"
version = "0.1.0"
authors = ["James Gilles <jhgilles@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
custom_error = "1.6"
log = "0.4"
unthwart = { path = "../unthwart" }
runtime = { version = "0.3.0-alpha.4" }
cargo_metadata = "0.8"
syn = "0.15.35"
quote = "0.6.12"
proc-macro2 = "0.4"

[dev-dependencies]
pretty_env_logger = "0.3.0"
toml = "0.5"
