[package]
name = "reprieve"
version = "0.1.0"
authors = ["James Gilles <jhgilles@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
num_cpus = "1"
rand = "0.6"
rand_xorshift = "0.1.1"
once_cell = "0.2"
parking_lot = "0.8"