[package]
name = "rustdoc-scrape"
version = "0.1.0"
authors = ["James Gilles <jhgilles@mit.edu>"]
edition = "2018"

[dependencies]
scoped_threadpool = "0.1.9"
soup = "0.4"
cargo_metadata = "0.8.0"
log = "0.4"
custom_error = "1.6.0"
syn = { version = "0.15", default_features = false, features = ["visit-mut", "parsing", "printing", "derive", "extra-traits", "clone-impls"] }
regex = "1"
lazy_static = "1.3"
quote = "0.6"

[dev-dependencies]
pretty_env_logger = "0.3.0"