[package]
name = "spoor"
version = "0.1.0"
authors = ["James Gilles <jhgilles@mit.edu>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-trace = "0.1"
tokio-trace-env-logger = { version = "0.1", git = "https://github.com/tokio-rs/tokio-trace-nursery/" }
tokio-trace-fmt = { version = "0.1", git = "https://github.com/tokio-rs/tokio-trace-nursery/" }

