[package]
name = "spoor"
version = "0.1.0"
authors = ["James Gilles <jhgilles@mit.edu>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-env-logger = { version = "0.1", git = "https://github.com/tokio-rs/tracing/" }

tracing-fmt = { version = "0.0.1-alpha.1", git = "https://github.com/tokio-rs/tracing/" }

