[package]
name = "tendon-api"
version = "0.1.0"
authors = ["James Gilles <jhgilles@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
smol_str = { version = "0.1.11", features = ["serde"] }
tracing = "0.1"
syn = { version = "1", features = ["full"], default_features = false }
quote = { version = "1", default_features = false }
hashbrown = { version = "0.5.0", features = ["nightly", "serde", "rayon"] }
dashmap = { version = "3.5.0", features = ["serde"] }
fxhash = "0.2.1"
quick-error = "1.2.3"
enum-map = "0.6.2"

[dev-dependencies]
serde_json = "1"
