[package]
name = "tendon-resolve"
version = "0.1.0"
authors = ["James Gilles <jhgilles@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
tracing = "0.1"
cargo_metadata = "0.8"
syn = { version = "1", features = ["full"], default_features = false }
quote = { version = "1", default_features = false }
proc-macro2 = { version = "1", default_features = false }
parking_lot = "0.8"
tendon-api = { path = "../tendon-api" }
lazy_static = "1.3.0"
quick-error = "1.2.3"
rayon = "1"

[dev-dependencies]
toml = "0.5"
failure = "0.1.5"
spoor = { path = "../spoor" }
criterion = "0.3.0"

[[bench]]
name = "components"
harness = false
