[package]
name = "transgress-api"
version = "0.1.0"
authors = ["James Gilles <jhgilles@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
proc-macro2 = { version = "0.4" }
smol_str = "0.1.11"