[package]
name = "transgress-resolve"
version = "0.1.0"
authors = ["James Gilles <jhgilles@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
tracing = "0.1"
cargo_metadata = "0.8"
syn = { version = "1", features = ["full", "visit-mut"] }
quote = { version = "1" }
proc-macro2 = { version = "1" }
parking_lot = "0.8"
transgress-api = { path = "../transgress-api" }
hashbrown = { version = "0.5.0", features = ["nightly", "serde"] }
fxhash = "0.2.1"
lazy_static = "1.3.0"
quick-error = "1.2.2"
rayon = "1"
dashmap = "1.0.4"

[dev-dependencies]
toml = "0.5"
failure = "0.1.5"
spoor = { path = "../spoor" }
criterion = "0.3.0"

[[bench]]
name = "benches"
harness = false