[package]
name = "transgress-source-scrape"
version = "0.1.0"
authors = ["James Gilles <jhgilles@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
custom_error = "1.6"
tokio-trace = "0.1"
cargo_metadata = "0.8"
syn = { version = "0.15.36", features = ["full"] }
quote = { version = "0.6.12" }
proc-macro2 = { version = "0.4" }
parking_lot = "0.8"
ccl = "3.5.3"
dirs = "2.0.1"
lazy_static = "1.3.0"
regex = "1.0"
spoor = { path = "../spoor" }
transgress-api = { path = "../transgress-api" }

[dev-dependencies]
toml = "0.5"
