[package]
name = "transgress"
version = "0.1.0"
authors = ["James Gilles <jhgilles@mit.edu>"]
edition = "2018"
readme = "README.md"
description = "placeholder"
license = "MIT"
repository = "https://github.com/kazimuth/transgress-rs"

[badges]
travis-ci = { repository = "kazimuth/transgress-rs", branch = "master" }
codecov = { service = "github", repository = "kazimuth/transgress-rs", branch = "master" }

[dependencies]
