[package]
name = "unthwart"
version = "0.1.0"
authors = ["James Gilles <jhgilles@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
num_cpus = "1"
log = "0.4"
futures-preview = { version = "0.3.0-alpha.16", features = ["nightly", "async-await"] }

[dev-dependencies]
pretty_env_logger = "0.3"
futures-timer = "0.2.1"